--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.7",
     "axios": "^1.5.0",
+    "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
